[tool.poetry]
name = "pypgatour"
version = "0.1.0"
description = ""
authors = ["Jason Damiani <me@jasondamiani.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
Js2Py = "^0.71"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
